adding the second lesson and fixing some typos

--- a/دوال بمدخلات.html
+++ b/دوال بمدخلات.html
@@ -22,15 +22,6 @@
             white-space: pre-wrap;
             font-family: 'Courier New', monospace;
         }
-
-        /* Style for the copy button */
-        .copy-button {
-            background-color: #4caf50;
-            color: white;
-            border: none;
-            padding: 5px 10px;
-            cursor: pointer;
-        }
     </style>
     <h2>دوال بمدخلات</h2>
     <p>
@@ -114,14 +105,14 @@ def greet_with_name(name):
     print(f"Hello {name}")
     print(f"How do you do {name}?")
 
-greet("Alaa")
+greet_with_name("Alaa")
     </code></pre>
     </p>
     <p>
         الان لو قمت بمانادات الدالة باسم مختلف سوف تستعمل ما قمت بتمريره
         ونتيجة الدالة مختلفة عن المرة الاولى
     <pre><code>    
-greet("Amine")
+greet_with_name("Amine")
     </code></pre>
     </p>
     <p>
