--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p><a href="دوال بمدخلات.html">دوال بمدخلات</a></p>
         </li>
         <li>
-            <p><a href="">انواع اعدادات الدوال</a></p>
+            <p><a href="انواع اعدادات الدوال.html">انواع اعدادات الدوال</a></p>
         </li>
         <li>
             <p><a href="">تمرين حاسب مساحة الطلاء</a></p>
