styling the html pages

--- a/index.html
+++ b/index.html
@@ -4,53 +4,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>8 اعدادات الدوال</title>
 </head>
-<style>
-    p {
-        font-size: larger;
-    }
-</style>
 
 <body>
-    <h2>
-        في الحصة السابعة سوف نتعلم حول اعدادات الدوال و في اخر الحصة سوف نقوم ببناء 
-        برنامج تشفير.
-    </h2>
-    <p>
-        تجدون في الاسفل جميع الدروس ومن الافضل اخذها بالترتيب.
-    </p>
-
-    <ol>
-        <li>
-            <p><a href="دوال بمدخلات.html">دوال بمدخلات</a></p>
-        </li>
-        <li>
-            <p><a href="انواع اعدادات الدوال.html">انواع اعدادات الدوال</a></p>
-        </li>
-        <li>
-            <p><a href="">تمرين حاسب مساحة الطلاء</a></p>
-        </li>
-        <li>
-            <p><a href="">تمرين التحقق من الاعداد الاولية</a></p>
-        </li>
-        <li>
-            <p><a href="">تشفير قيصر الجزء الاول - التشفير</a></p>
-        </li>
-        <li>
-            <p><a href="">تشفير قيصر الجزء الثاني - فك التشفير</a></p>
-        </li>
-        <li>
-            <p><a href="">تشفير قيصر الجزء الثالث - تنظيم الكود</a></p>
-        </li>
-        <li>
-            <p><a href="">تشفير قيصر الجزء الاخير - تحسين البرنامج واللمسات الاخيرة</a></p>
-        </li>
-    </ol>
-    <p>
-        تم العمل على هذا الموقع ومحتواه من طرف
-        <a href="https://alaafilali.github.io/alaafilali/">alaa filali</a>
-    </p>
+    <div class="book-page">
+        <h1 class="book-title">اعدادات الدوال وتشفير قيصر</h1>
+        <div class="content">
+            <p>
+                في الحصة الثامنة سوف نتعلم حول اعدادات الدوال و في اخر الحصة سوف نقوم ببناء 
+                برنامج تشفير.
+            </p>
+            <p>
+                تجدون في الاسفل جميع الدروس ومن الافضل اخذها بالترتيب.
+            </p>
+        
+            <ol>
+                <li>
+                    <p><a href="دوال بمدخلات.html">دوال بمدخلات</a></p>
+                </li>
+                <li>
+                    <p><a href="انواع اعدادات الدوال.html">انواع اعدادات الدوال</a></p>
+                </li>
+                <li>
+                    <p><a href="">تمرين حاسب مساحة الطلاء</a></p>
+                </li>
+                <li>
+                    <p><a href="">تمرين التحقق من الاعداد الاولية</a></p>
+                </li>
+                <li>
+                    <p><a href="">تشفير قيصر الجزء الاول - التشفير</a></p>
+                </li>
+                <li>
+                    <p><a href="">تشفير قيصر الجزء الثاني - فك التشفير</a></p>
+                </li>
+                <li>
+                    <p><a href="">تشفير قيصر الجزء الثالث - تنظيم الكود</a></p>
+                </li>
+                <li>
+                    <p><a href="">تشفير قيصر الجزء الاخير - تحسين البرنامج واللمسات الاخيرة</a></p>
+                </li>
+            </ol>
+            <p>
+                تم العمل على هذا الموقع ومحتواه من طرف
+                <a href="https://alaafilali.github.io/alaafilali/">alaa filali</a>
+            </p>
+        </div>
+    </div>
 </body>
 
 </html>
