adding the third lesson

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <p><a href="انواع اعدادات الدوال.html">انواع اعدادات الدوال</a></p>
                 </li>
                 <li>
-                    <p><a href="">تمرين حاسب مساحة الطلاء</a></p>
+                    <p><a href="تمرين حاسب مساحة الطلاء.html">تمرين حاسب مساحة الطلاء</a></p>
                 </li>
                 <li>
                     <p><a href="">تمرين التحقق من الاعداد الاولية</a></p>
