adding the lesson 4

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <p><a href="تمرين حاسب مساحة الطلاء.html">تمرين حاسب مساحة الطلاء</a></p>
                 </li>
                 <li>
-                    <p><a href="">تمرين التحقق من الاعداد الاولية</a></p>
+                    <p><a href="تمرين التحقق من الاعداد الاولية.html">تمرين التحقق من الاعداد الاولية</a></p>
                 </li>
                 <li>
                     <p><a href="">تشفير قيصر الجزء الاول - التشفير</a></p>
