adding lesson number 6

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <p><a href="تشفير قيصر الجزء الاول - التشفير.html">تشفير قيصر الجزء الاول - التشفير</a></p>
                 </li>
                 <li>
-                    <p><a href="">تشفير قيصر الجزء الثاني - فك التشفير</a></p>
+                    <p><a href="تشفير قيصر الجزء الثاني - فك التشفير.html">تشفير قيصر الجزء الثاني - فك التشفير</a></p>
                 </li>
                 <li>
                     <p><a href="">تشفير قيصر الجزء الثالث - تنظيم الكود</a></p>
