adding lesson number 7

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <p><a href="تشفير قيصر الجزء الثاني - فك التشفير.html">تشفير قيصر الجزء الثاني - فك التشفير</a></p>
                 </li>
                 <li>
-                    <p><a href="">تشفير قيصر الجزء الثالث - تنظيم الكود</a></p>
+                    <p><a href="تشفير قيصر الجزء الثالث - تنظيم الكود.html">تشفير قيصر الجزء الثالث - تنظيم الكود</a></p>
                 </li>
                 <li>
                     <p><a href="">تشفير قيصر الجزء الاخير - تحسين البرنامج واللمسات الاخيرة</a></p>
